Drupal 8 - Routing - updates

--- a/d8[1]-dr-dr[1].html
+++ b/d8[1]-dr-dr[1].html
@@ -69,6 +69,9 @@
                 </div>
 
 
+                <p>(Документация Symfony использует «шаблон» вместо «path», но поскольку Symfony 2.2 (теперь включен в Drupal), ключ «path» используется в файле маршрутизации.)</p>
+
+
 
 
 
