Drupal 8 - Routing1 - updates second

--- a/d8[1]-dr-dr[1].html
+++ b/d8[1]-dr-dr[1].html
@@ -93,6 +93,30 @@
                     </div>
                 </div>
 
+                <h3>Структура маршрутов</h3>
+
+                <ul>
+                    <li>путь (обязательно) :
+                        URL-адрес маршрута с ведущей косой чертой (например, ).
+                        Вы можете использовать динамические свойства,
+                        включив их в фигурные скобки.
+                        Они будут передаваться в виде аргументов
+                        через преобразователи параметров в контроллер
+                        Обратите внимание, что первый элемент пути не должен быть динамическим.
+                        Вы также можете определить дополнительные параметры
+                        в конце вашего пути
+                        <srong>.path: '/book'path: '/node/{node}/outline'</srong></li>
+                    <li>defaults (required) :
+                        Определяет свойства по умолчанию для маршрута.
+                        Чтобы указать, как генерируется вывод, укажите одно из следующего:
+                    Наконец, если какие-либо статические аргументы
+                        должны быть переданы контроллеру,
+                        укажите их в массиве по умолчанию.
+                        Назовите их, чтобы они соответствовали аргументам
+                        вашего метода контроллера. </li>
+
+
+                </ul>
 
 
 
