Drupal 8 - Routing1 - updates third

--- a/d8[1]-dr-dr[1].html
+++ b/d8[1]-dr-dr[1].html
@@ -37,17 +37,26 @@
                 <br />
                 <br />
                 <br />
-                <p>Маршрутизация или роутинг</p>
+                <h2>Маршрутизация или роутинг</h2>
                 <br />
                 <br />
 
-                <p>Drupal 8 использует ядро ​​Symfony HTTP Kernel,
-                    систему, которая получает запрос,
-                    и просит другие системы произвести запрошенный вывод (объект ответа)
+                <p>Drupal 8 использует ядро ​​<strong>Symfony HTTP Kernel</strong>,
+                    систему, которая получает запрос,<br/>
+                    и просит другие системы произвести запрошенный вывод
+                    <strong>(объект ответа)</strong><br/>
                     и отправляет ответ обратно клиенту.
-                    Выход генерируется куском кода, называемым контроллером.
-                    Теоретически контроллер может быть либо чистой функцией PHP 4,
-                    либо методом объекта, либо анонимной функцией.
+                    <br/><br/>
+
+
+                    Выход генерируется куском кода, называемым ​​<strong>контроллером</strong>.<br/>
+                    Теоретически контроллер может быть либо
+                    <ul>
+                <li>чистой функцией PHP 4,</li>
+                <li>    либо методом объекта,</li>
+                <li>   либо анонимной функцией.</li>
+                    </ul>
+                <br/>
                     </p>
                 <br />
 
