Drupal 8 - Routing1 - updates fourth

--- a/d8[1]-dr-dr[1].html
+++ b/d8[1]-dr-dr[1].html
@@ -28,7 +28,7 @@
             <p class="float-right d-md-none">
                 <button type="button" class="btn btn-primary btn-sm" data-toggle="offcanvas">Toggle nav</button>
             </p>
-            <div class="jumbotron">
+            <p class="jumbotron">
 
 
 
@@ -62,10 +62,21 @@
 
                 <h3>Маршрутизация Symfony по сравнению с маршрутизацией Drupal</h3>
 
-                В качестве разработчика модуля вы определяете список маршрутов и соответствующих контроллеров, например:
-                Ключевой концепцией является контроллер, который получает некоторые параметры из системы и преобразует их в ответ. В этом примере у вас есть параметр 'taxonomy_vocabulary'. Все без подчеркивания считается параметром контроллера. Если вы хотите указать значение по умолчанию, вы должны поместить его в массив по умолчанию. Свойства, не имеющие ничего общего с параметрами контроллера, считаются внутренними и имеют символ подчеркивания в качестве префикса.
+                <p>В качестве разработчика модуля вы определяете список маршрутов и соответствующих контроллеров,
+                    например:</p>
+                <p>Ключевой концепцией является <strong>контроллер</strong>, который получает некоторые параметры из системы и преобразует их в ответ.</p>
 
-                Symfony также позволяет вам определять регулярные выражения для проверки правильности входящего параметра (с использованием «требований»). В приведенном выше коде он будет соответствовать только числам.
+                В этом примере у вас есть параметр <strong>'taxonomy_vocabulary'</strong>.
+
+                <p>Все <strong>без подчеркивания</strong> считается параметром контроллера.</p>
+
+                <p>Если вы хотите указать значение по умолчанию, вы должны поместить его в <strong>массив по умолчанию</strong>.</p>
+
+                <p>Свойства, не имеющие ничего общего с параметрами контроллера, считаются <strong>внутренними</strong> и имеют <strong>символ подчеркивания</strong> в качестве префикса.</p>
+
+                <p>Symfony также позволяет вам определять <strong>регулярные выражения для проверки правильности входящего параметра</strong> (с использованием «требований»).</p>
+
+                <p>В приведенном выше коде он будет соответствовать только числам.</p>
                 &nbsp;&nbsp;&nbsp;
                 <p><span class="alert alert-success" data-toggle="collapse" data-target="#dockernat12" aria-expanded="false" aria-controls="dockerps">Пример</span></p>
 
@@ -80,45 +91,57 @@
                 </div>
 
 
-                <p>(Документация Symfony использует «шаблон» вместо «path», но поскольку Symfony 2.2 (теперь включен в Drupal), ключ «path» используется в файле маршрутизации.)</p>
+                <p>(Документация Symfony использует <strong>«шаблон»</strong> вместо <strong>«path»</strong>, но поскольку Symfony 2.2 (теперь включена в Drupal), ключ «path» используется в файле маршрутизации.)</p>
 
                 <h3>Маршрутизация в файлах routing.yml</h3>
 
-                <p>Пример</p>
 
-                <strong>example.info.ymlexample.routing.yml</strong>
+
+                <p><strong>example.info.ymlexample.routing.yml</strong></p>
 
 
                 <p><span class="alert alert-success" data-toggle="collapse" data-target="#r2" aria-expanded="false" aria-controls="dockerps">Пример</span></p>
 
                 <div class="collapse" id="r2">
-                    <div class="card card-body"> example.content:
-                        path: '/example'
-                        defaults:
-                        _controller: '\Drupal\example\Controller\ExampleController::content'
-                        _title: 'Hello World'
-                        requirements:
-                        _permission: 'access content'
+                    <div class="card card-body">
+                        example.content:<br/>
+                        path: '/example'<br/>
+                        defaults:<br/>
+                        _controller: '\Drupal\example\Controller\ExampleController::content'<br/>
+                        _title: 'Hello World'<br/>
+                        requirements:<br/>
+                        _permission: 'access content'<br/>
                     </div>
                 </div>
-
+                <br/>
+                <br/>
                 <h3>Структура маршрутов</h3>
+                <br/>
+                <br/>
 
                 <ul>
                     <li>путь (обязательно) :
-                        URL-адрес маршрута с ведущей косой чертой (например, ).
-                        Вы можете использовать динамические свойства,
-                        включив их в фигурные скобки.
-                        Они будут передаваться в виде аргументов
-                        через преобразователи параметров в контроллер
+                        <p><strong>URL-адрес маршрута</strong> с ведущей косой чертой (например, ).</p>
+
+                        <p>Вы можете использовать динамические свойства,
+                            включив их в фигурные скобки.</p>
+
+                        <p>Они будут передаваться в виде аргументов
+                            через <strong>преобразователи параметров</strong> в контроллер</p>
+
                         Обратите внимание, что первый элемент пути не должен быть динамическим.
                         Вы также можете определить дополнительные параметры
                         в конце вашего пути
-                        <srong>.path: '/book'path: '/node/{node}/outline'</srong></li>
+
+
+                        <srong>.path: '/book'path: '/node/{node}/outline'</srong>
+                    </li>
+
+
                     <li>defaults (required) :
                         Определяет свойства по умолчанию для маршрута.
                         Чтобы указать, как генерируется вывод, укажите одно из следующего:
-                    Наконец, если какие-либо статические аргументы
+                        Наконец, если какие-либо статические аргументы
                         должны быть переданы контроллеру,
                         укажите их в массиве по умолчанию.
                         Назовите их, чтобы они соответствовали аргументам
@@ -128,8 +151,42 @@
                 </ul>
 
 
+                <p>Необязательные параметры:
+                    если вы планируете включать необязательные параметры в конце вашего пути,
+                    также должны соответствовать <strong>foo / bar</strong>,
+                    а baz - конкретное значение,
+                    которое вы должны установить в массиве по умолчанию.<strong>foo/bar/{baz}</strong></p>
 
 
+                <p><strong>_controller :</strong> значение является вызываемым (обычно ), возвращающим либо <strong>classname::method</strong></p>
+
+                <p><strong>рендерируемый массив</strong>.
+                    Это будет отображаться в HTML и использоваться в качестве основного содержимого обычной тематической страницы Drupal.</p>
+
+                <p><strong>возвращая объект</strong>.
+                Для не-HTML (например, XML-фиды) или только для «фрагмента страницы» HTML.
+                Это будет отправлено напрямую, никакие темы или блоки не будут добавлены.
+                <strong>Symfony\Component\HttpFoundation\Response</strong></p>
+
+
+            <p>пространство имен: <strong>ex:\Drupal\[module name]\Controller\[ClassName]::[method]
+                _controller: '\Drupal\test_mod\Controller\TestModController::build'</strong></p>
+
+            <p>Путь:  например:  содержащий класс с методом
+            ( «метод» является общим термином для ОО функции внутри класса).<strong>[module name]/src/Controller/[ClassName].php
+                    test_mod/src/Controller/TestModController.phpTestModControllerbuild()</strong></p>
+
+            <p><strong>service:, где «controller.test»</strong> - это сервис, который вы определили в контейнере инъекции зависимостей
+            . например:<strong>controller.test:[method]
+            _controller: 'controller.test:buildAction'</strong></p>
+
+
+            <p>Обратите внимание, что значение <strong>_controller</strong> - это не путь,
+                а скорее имя класса с именами,
+                использующее стандарт PSR-4 для автозагрузки пространства имен PHP
+                Имя пути с именами PSR-4 должно указывать на соответствующую структуру пути.</p>
+
+            <p>Обратите внимание, что имена модулей имеют строчные буквы с символами подчеркивания, а имена классов - верблюжью нотацию</p>
 
 
 
